# vulcan_exojax_run

./: .gitignore  CLAUDE.md  README.md  config.py  exojax_rt.py  interp_map.py  pyproject.toml  requirements-hpc.txt  requirements.txt  vulcan_chem.py
.github/workflows/: tests.yml
data/: notes.md  sensitivity.npz  smoke.npz  wasp39b_bench_G395H.txt  wasp39b_bench_NIRCam.txt  wasp39b_bench_NIRISS.txt  wasp39b_bench_PRISM.txt  wasp39b_prism.txt  wide_sensitivity.npz  zco_jacobians.npz  zco_walk.npz
data/cm24_wasp39b/: G395H_NRS1_R100.csv  G395H_NRS2_R100.csv  NIRCam_R100.csv  NIRISS_O1_R100.csv  NIRISS_O2_R100.csv
fisher_forecast/: fetch_benchmark_spectra.py  fig_fisher_forecast.py  noise_model.py  noise_pandexo.py
jwst_tool/: app.py  cli.py  instruments.py  noise.py  pandeia_worker.py
retrieval_framework/: README.md  config_schema.py  pipeline.py  plot_smc.py  probe_memory.py  retrieval_forward.py  run_smc.py  smoke_retrieval.py  tp_profile.py
retrieval_framework/tests/: conftest.py  test_binning.py  test_init_state.py  test_warm_reject.py
runs/w39b_smc_retrieval/: README.md  case.py  run_nas_w39b.pbs
runs/w39b_smc_retrieval/overrides/: poc_fast.json
sensitivity_demo/: fig_exojax_sensitivity.py  forward.py  run_demo.py  run_figs.py
validation/: broadening_ab.py  elemental_audit.py  resolution_ladder.py  smoke_test.py  smoke_zco.py  top_pressure_ladder.py  validate_wide_chem.py
vulcan-jwst-tool/: README.md  notes.md  pyproject.toml
vulcan-jwst-tool/src/jwst_tool/: __init__.py  detect.py  fisher.py  forward.py  planets.py
vulcan-retrieval/: README.md  notes.md  pyproject.toml
vulcan-retrieval/examples/: fig_exojax_sensitivity.py  notes.md  run_figs.py
vulcan-retrieval/runs/w39b_smc_retrieval/: README.md  case.py  notes.md  run_nas_w39b.pbs
vulcan-retrieval/runs/w39b_smc_retrieval/data/smoke/: config.json  observations.npz
vulcan-retrieval/runs/w39b_smc_retrieval/overrides/: r3000_wide.json  r3000_wide_n96.json
vulcan-retrieval/scripts/zco_information/: build_zco_jacobians.py  build_zco_walk.py  fig_zco_disequilibrium.py  zco_lib.py
vulcan-retrieval/src/retrieval_framework/: __init__.py  calibrate_count_max.py  config_schema.py  observations.py  plot_smc.py  probe_memory.py  run_smc.py  smoke_retrieval.py  tp_profile.py  validate_warm.py
vulcan-retrieval/src/retrieval_framework/forward/: __init__.py  config.py  exojax_rt.py  interp_map.py  vulcan_chem.py
vulcan-retrieval/tests/: test_binning.py  test_init_state.py  test_smc_gaussian.py  test_uspace_prior.py  test_validate_warm.py  test_warm_extrap.py  test_warm_reject.py
vulcan-retrieval/validation/: mala_reversibility.py  smoke_coref.py  smoke_test.py
zco_information/: build_zco_jacobians.py  build_zco_walk.py  fig_zco_disequilibrium.py  fig_zco_geometry.py  fig_zco_information.py  zco_lib.py
