# vulcan-jwst-tool: JWST instrument selector on the vulcan-retrieval forward
# model. The Pandeia ETC noise backend runs in its OWN conda env (pandeia.engine
# 3.0), addressed via JWST_TOOL_PANDEIA_PYTHON -- it is deliberately NOT a
# dependency here. Data/caches live at the repo-root data/jwst_tool/ tree
# (override with JWST_TOOL_DATA_DIR).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan-jwst-tool"
dynamic = ["version"]
description = "JWST instrument selector: VULCAN-JAX chemistry -> ExoJAX transmission spectra -> Pandeia ETC noise; detection significance + Fisher forecasts (Streamlit GUI + programmatic API)"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Isaac Malsky" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib",
    "jax>=0.6.2",
    "vulcan-retrieval>=0.6.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.30", "pandas"]
dev = ["ruff>=0.11", "build>=1.2", "twine>=5"]

[project.scripts]
jwst-tool = "jwst_tool.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "jwst_tool._version.__version__" }

[tool.ruff]
line-length = 100
